; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_trap-v6.c_abort_icache.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_trap-v6.c_abort_icache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trapframe = type { i32 }
%struct.thread = type { i32 }
%struct.ksig = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trapframe*, i32, i32, i32, i32, %struct.thread*, %struct.ksig*)* @abort_icache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @abort_icache(%struct.trapframe* %0, i32 %1, i32 %2, i32 %3, i32 %4, %struct.thread* %5, %struct.ksig* %6) #0 {
  %8 = alloca %struct.trapframe*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.thread*, align 8
  %14 = alloca %struct.ksig*, align 8
  store %struct.trapframe* %0, %struct.trapframe** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store %struct.thread* %5, %struct.thread** %13, align 8
  store %struct.ksig* %6, %struct.ksig** %14, align 8
  %15 = load %struct.trapframe*, %struct.trapframe** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %12, align 4
  %20 = load %struct.thread*, %struct.thread** %13, align 8
  %21 = load %struct.ksig*, %struct.ksig** %14, align 8
  %22 = call i32 @abort_fatal(%struct.trapframe* %15, i32 %16, i32 %17, i32 %18, i32 %19, %struct.thread* %20, %struct.ksig* %21)
  ret i32 0
}

declare dso_local i32 @abort_fatal(%struct.trapframe*, i32, i32, i32, i32, %struct.thread*, %struct.ksig*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
